# rudesmtp

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  configure  configure.ac
src/: smtp.cpp  smtp.h  smtpimpl.cpp  smtpimpl.h
